--- a/styles/style.css
+++ b/styles/style.css
@@ -288,6 +288,178 @@ main {
 }
 
 
+/* table & input styles */
+
+
+.bmi {
+    margin-top: 78px;
+}
+
+.bmi-title {
+    color: rgb(255, 255, 255);
+    font-size: 48px;
+    font-weight: 900;
+    width: 570px;
+    margin: 0 auto;
+}
+
+.bmi-description {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 14px;
+    width: 570px;
+    margin: 0 auto;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    color: rgb(255, 255, 255);
+
+    font-size: 16px;
+    font-weight: 500;
+    text-align: left;
+    padding: 10px 16px;
+}
+
+td {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    text-align: left;
+    padding: 10px 16px;
+}
+
+/* BMI-Responsive-styles */
+
+.bmi-chart-title {
+    color: rgb(255, 255, 255);
+    font-size: 28px;
+    font-weight: 900;
+    margin: 52px 0;
+}
+
+.table-input {
+    background: rgb(34, 34, 34);
+    width: 100%;
+    margin-top: 88px;
+}
+
+.table-and-input {
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-title {
+    color: rgb(255, 255, 255);
+    font-size: 28px;
+    font-weight: 900;
+    margin-top: 52px;
+}
+
+.form-description {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    width: 500px;
+    margin-top: 14px;
+}
+
+form {
+    margin-top: 34px;
+}
+
+#text {
+    padding: 12px 40px 12px 20px;
+    border-radius: 8px;
+    border: none;
+    background: rgba(255, 255, 255, 0.1);
+    color: rgb(177 177 177 / 50%);
+    font-size: 16px;
+    margin: 5px 10px 10px 0
+}
+
+.gender {
+    width: 255px;
+}
+
+.select {
+    width: 524px;
+}
+
+.btn3 {
+    margin-bottom: 50px;
+}
+
+/* Team-styles */
+
+.team {
+    margin-top: 100px;
+}
+
+.team-title {
+    color: rgb(255, 255, 255);
+    font-size: 48px;
+    font-weight: 900;
+    text-align: center;
+}
+
+.team-description {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    text-align: center;
+    margin-top: 14px;
+    margin-bottom: 70px;
+}
+
+.trainer-container {
+    width: 1140px;
+    margin: 0 auto;
+    border-radius: 18px;
+    background: rgb(34, 34, 34);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 30px;
+}
+
+.trainer-card {
+    /* padding: 20px 20px 10px 10px; */
+}
+
+.trainer-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 18px;
+
+}
+
+.name {
+    margin: -70px 0px 5px 20px;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 800;
+}
+
+.position {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    margin-left: 20px;
+}
+
+
+
+
+
+
 
 
 
@@ -425,7 +597,7 @@ main {
         padding: 31px 30px 0 30px;
     }
 
-    .run-title{
+    .run-title {
         font-size: 32px;
     }
 
@@ -433,8 +605,65 @@ main {
         padding: 31px 33px 35px 33px;
     }
 
-    .run-text .btn1{
+    .run-text .btn1 {
         /* padding:  16px 105px 16px 105px; */
         width: 100%;
+    }
+
+    .table-and-input {
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .bmi-title,
+    .bmi-description {
+        width: 90%;
+    }
+
+    .bmi-title {
+        font-size: 40px;
+        margin-bottom: 8px;
+    }
+
+    .form-description {
+        width: 90%;
+    }
+
+    #text {
+        padding: 12px 0px 12px 10px;
+        font-size: 12px;
+    }
+
+    .gender {
+        width: 157px;
+    }
+
+    .select {
+        width: 328px;
+    }
+
+    .btn3 {
+        padding: 16px 50px 16px 50px;
+        font-size: 17px;
+    }
+
+    /* Team-Responsive-styles */
+
+
+    .trainer-container {
+        grid-template-columns: repeat(1, 1fr);
+        width: 75%;
+    }
+
+    .team-title {
+        font-size: 35px;
+    }
+
+    .team-description {
+        width: 334px;
+        margin: 0px auto;
+        margin-top: 14px;
+        margin-bottom: 70px;
+
     }
 }
