--- a/styles/style.css
+++ b/styles/style.css
@@ -12,11 +12,14 @@
 body {
     background-color: black;
     color: white;
+    transition: all 0.5s ease;
 }
 
 /* navbar-styles */
 
-
+header {
+    background: linear-gradient(#a9a9a924, #ffffff24, #1a1a1a30);
+}
 
 .navbar {
     display: flex;
@@ -33,7 +36,7 @@ body {
 .navbar ul {
     display: flex;
     align-items: center;
-    gap: 47px;
+    justify-content: space-between;
     list-style: none;
     border: 2px solid rgba(255, 255, 255, 0.1);
     border-radius: 39px;
@@ -46,9 +49,9 @@ body {
     margin-left: 2px;
 }
 
-.navbar ul #about {
+/* .navbar ul #about {
     margin-right: 18px;
-}
+} */
 
 .navbar h1 {
     color: rgb(230, 83, 60);
@@ -60,16 +63,24 @@ body {
 
 .navbar ul li a {
     text-decoration: none;
+    padding: 8px 20px 8px 20px;
     color: rgb(255, 255, 255);
     font-size: 18px;
+    transition: all 0.5s ease;
+}
+
+.navbar ul li a:hover {
+    background: rgb(230, 83, 60);
+    padding: 8px 20px 8px 20px;
+    border-radius: 46px;
+
 }
 
 .banner {
     display: flex;
-
     max-width: 1140px;
     margin: 0 auto;
-
+    padding-bottom: 160px;
 }
 
 .banner-text {
@@ -79,13 +90,14 @@ body {
 
 .banner-title {
     color: rgb(255, 255, 255);
-    font-size: 78px;
+    font-size: 76px;
     font-weight: 900;
 }
 
 .banner-title #font-style {
-    font-family: ;
-    font-weight: 400;
+    font-family: math;
+    font-weight: 900;
+    font-style: italic;
 
 
 }
@@ -186,6 +198,9 @@ body {
     width: 40px;
     border-radius: 50%;
     background: rgb(230, 83, 60);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* main styles */
@@ -196,7 +211,7 @@ main {
 }
 
 .habits {
-    margin-top: 160px;
+    /* margin-top: 160px; */
 }
 
 .habits-title {
@@ -269,7 +284,7 @@ main {
 
 .run-title {
     color: rgb(255, 255, 255);
-    font-size: 48px;
+    font-size: 47px;
     font-weight: 900;
 }
 
@@ -456,6 +471,70 @@ form {
 }
 
 
+/* Footer-styles */
+
+
+footer {
+    width: 100%;
+    background-color: rgb(34, 34, 34);
+    margin-top: 100px;
+}
+
+.text-container {
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.text-box {
+    margin-top: 70px;
+}
+
+.fitness {
+    color: rgb(230, 83, 60);
+    font-size: 60px;
+    font-weight: 900;
+    font-style: italic;
+}
+
+.fitness-description {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    width: 370px;
+    margin-top: 14px;
+}
+
+.text-box ul li {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 18px;
+    margin-top: 20px;
+    list-style: none;
+    cursor: pointer;
+}
+
+.text-box .text-title {
+    margin-bottom: 35px;
+}
+
+.last-text {
+    max-width: 1140px;
+    margin: 0 auto;
+
+}
+
+.divider {
+    margin-top: 75px;
+    height: 2px;
+    background-color: rgb(124 124 124 / 50%);
+}
+
+.footer-description {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 18px;
+    padding: 40px 0;
+}
 
 
 
@@ -565,6 +644,9 @@ form {
     .card-2 .ball {
         height: 30px;
         width: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     /* habits-section */
@@ -665,5 +747,23 @@ form {
         margin-top: 14px;
         margin-bottom: 70px;
 
+    }
+
+
+    /* Footer-Responsive-styles */
+
+
+
+    .text-container {
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .fitness-description {
+        width: 280px;
+    }
+
+    .last-text {
+        width: 90%;
     }
 }
